sw_esp32/static_analysis/cppcheck.txt
Cppcheck 2.13.0


../plant_boss/drivers/bh1750fvi.c:60:66: error: Array 'buf_rx[2]' accessed at index 2, which is out of bounds. [arrayIndexOutOfBounds]
    light = (float)(((uint16_t)buf_rx[0] << 8) | (uint16_t)buf_rx[2]) / 1.2;
                                                                 ^


cppcheck finished